<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Ex1Fragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CBCBFE"
        android:text="@string/ex1_title"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMin"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/ex1_min"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtMin"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Input min number"
                android:inputType="number"
                android:text="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMax"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/ex1_max"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtMax"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="Input max number"
                android:inputType="number"
                android:text="100" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ex1_generate"
        android:textColorLink="#CACAFD" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ex1_result"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtOutputEx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#CACAFD"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>